--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>eelテスト</title>
+        <title>課題03</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
