commit from develop firsttime

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>課題03-eelでデスクトップアプリ作成</title>
+        <title>課題03-eel</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
