--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
         <div class="search_method">
             CSVファイル名<input id="csv_name" type="text"><br>
             検索ワード<input id="search_word" type="text">
-            <input id="search_button" type="submit" value="検索"><br> 
+            <button id="search">検索</button><br/> 
         </div>
         </form>
         <div>
@@ -17,23 +17,7 @@
         </div>
 
         <script type="text/javascript" src="./eel.js"></script>
-            <script type="text/javascript">
-            eel.expose(brank_check)
-            function brank_check(){
-            const search_word = document.getElementById('search_word')
-            const search_button = document.getElementById('search_button')
-            search_button.addEventListener('click', (e) => {
-                e.preventDefault();
-                if(search_word.value == ""){
-                    alert("検索ワードは必須です");
-                }else{
-                search_method.submit();
-                }
-            });
-
-
-            }
-        </script>
+        <script type="text/javascript" src="./index.js"></script>
 
     </body>
 </html>
