--- a/html/index.html
+++ b/html/index.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <h2>eelテスト</h2>
-        <form action="" method="get" name="form1">
         <div class="search_method">
-            CSVファイル名<input id="csv_name" type="text"><br>
+            <!-- CSVファイル名<input id="csv_name" type="text"><br> -->
+            CSVファイルを選択して下さい<br>
+            <input type="file" id="csv_name"><br>
             検索ワード<input id="search_word" type="text">
-            <button id="search">検索</button><br/> 
+            <button id="search" onclick="view_log_js()">検索</button><br/> 
         </div>
-        </form>
         <div>
             <textarea id="result" class="result_area"></textarea>
         </div>
